removing : from .yml testing

--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -54,7 +54,7 @@
     "libs = []\n",
     "with open(f, 'r') as fo:\n",
     "    for l in fo.readlines():\n",
-    "        if ('- ' in l) and ('#' not in l):\n",
+    "        if ('- ' in l) and ('#' not in l) and (':' not in l):\n",
     "            l = l.strip('\\n').strip(' ').strip('-').strip(' ')\n",
     "            l = l.split('>=')[0]\n",
     "            libs.append(l)\n",
@@ -63,15 +63,6 @@
     "    ]\n",
     "libs = [i.replace('-', '_') for i in libs]\n",
     "libs = [bespoke[i] if i in bespoke else i for i in libs]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "libs"
    ]
   },
   {
