--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -59,7 +59,7 @@
     "            l = l.split('>=')[0]\n",
     "            libs.append(l)\n",
     "libs = [i for i in libs if i not in [\n",
-    "    'conda-forge', 'libgdal-arrow-parquet', 'pip', 'cenpy']\n",
+    "    'conda-forge', 'libgdal-arrow-parquet', 'pip', 'cenpy', 'protobuf']\n",
     "    ]\n",
     "libs = [i.replace('-', '_') for i in libs]\n",
     "libs = [bespoke[i] if i in bespoke else i for i in libs]"
