--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -49,7 +49,8 @@
     "    'h3_py': 'h3',\n",
     "    'python_duckdb': 'duckdb',\n",
     "    'scikit_learn': 'sklearn',\n",
-    "    'scikit_mobility': 'skmob'\n",
+    "    'scikit_mobility': 'skmob',\n",
+    "    'xarray_spatial': 'xrspatial'\n",
     "}\n",
     "libs = []\n",
     "with open(f, 'r') as fo:\n",
