fix imports in the hardcoded tests

--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -166,6 +166,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import geopandas\n",
+    "import geopandas as gpd\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from pysal import lib as libps\n",
     "shp = libps.examples.get_path('columbus.shp')\n",
     "db = geopandas.read_file(shp)\n",
@@ -392,8 +403,8 @@
    "outputs": [],
    "source": [
     "# rioxarray + xarray_leaflet\n",
-    "import xarray\n",
-    "us = xarray.open_rasterio(\n",
+    "import xarray, rioxarray\n",
+    "us = rioxarray.open_rasterio(\n",
     "    \"us_cog.tif\"\n",
     ").sel(\n",
     "    band=1, \n",
