More imports to hardcoded tests

--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -276,6 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import osmnx\n",
     "city = osmnx.geocode_to_gdf('Berkeley, California, US')\n",
     "osmnx.plot_footprints(osmnx.project_gdf(city));"
    ]
@@ -333,6 +334,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import rasterio as rio\n",
     "import contextily as ctx\n",
     "tl = ctx.providers.CartoDB.Positron\n",
     "\n",
