--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -287,6 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pyrosm\n",
     "from pyrosm import get_data\n",
     "# Download data for the city of Helsinki\n",
     "fp = get_data(\"Helsinki\", directory=\"./\")\n",
