use pygeos w/ pyrosm

--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -287,6 +287,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.environ['USE_PYGEOS'] = '1'\n",
+    "import geopandas\n",
     "import pyrosm\n",
     "from pyrosm import get_data\n",
     "# Download data for the city of Helsinki\n",
@@ -338,6 +341,9 @@
     "import rasterio as rio\n",
     "import contextily as ctx\n",
     "tl = ctx.providers.CartoDB.Positron\n",
+    "\n",
+    "os.environ['USE_PYGEOS'] = '0'\n",
+    "import geopandas\n",
     "\n",
     "db = geopandas.read_file(ps.lib.examples.get_path('us48.shp'))\n",
     "db.crs = \"EPSG:4326\"\n",
