--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -282,11 +282,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "import os\n",
     "os.environ['USE_PYGEOS'] = '1'\n",
     "import geopandas\n",
@@ -321,7 +320,8 @@
     "drive_net = osm.get_network(network_type=\"driving\")\n",
     "drive_net.plot()\n",
     "\n",
-    "! rm Helsinki.osm.pbf"
+    "! rm Helsinki.osm.pbf\n",
+    "```"
    ]
   },
   {
@@ -341,9 +341,6 @@
     "import rasterio as rio\n",
     "import contextily as ctx\n",
     "tl = ctx.providers.CartoDB.Positron\n",
-    "\n",
-    "os.environ['USE_PYGEOS'] = '0'\n",
-    "import geopandas\n",
     "\n",
     "db = geopandas.read_file(ps.lib.examples.get_path('us48.shp'))\n",
     "db.crs = \"EPSG:4326\"\n",
