--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -340,6 +340,7 @@
     "import numpy as np\n",
     "import rasterio as rio\n",
     "import contextily as ctx\n",
+    "import pysal as ps\n",
     "tl = ctx.providers.CartoDB.Positron\n",
     "\n",
     "db = geopandas.read_file(ps.lib.examples.get_path('us48.shp'))\n",
