--- a/env/py/check_py_stack.ipynb
+++ b/env/py/check_py_stack.ipynb
@@ -38,13 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "f = './gds_py.yml'\n",
+    "arch = ! dpkg --print-architecture\n",
+    "f = f'../gds_{arch[0]}.yml'\n",
     "bespoke = {\n",
     "    'h3_py': 'h3',\n",
     "    'python_duckdb': 'duckdb',\n",
@@ -57,8 +58,10 @@
     "    for l in fo.readlines():\n",
     "        if ('- ' in l) and ('#' not in l) and (':' not in l):\n",
     "            l = l.strip('\\n').strip(' ').strip('-').strip(' ')\n",
+    "            l = l.split('==')[0]\n",
     "            l = l.split('>=')[0]\n",
-    "            libs.append(l)\n",
+    "            if l[:2] != 'r-':\n",
+    "                libs.append(l)\n",
     "libs = [i for i in libs if i not in [\n",
     "    'conda-forge', 'libgdal-arrow-parquet', 'pip', 'cenpy', 'protobuf']\n",
     "    ]\n",
@@ -123,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -393,7 +396,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Convert us.tiff to COG with rio-cogeo\n",
@@ -401,42 +406,6 @@
     "! rio cogeo validate us_cog.tif\n",
     "! rio info us_cog.tif\n",
     "! rio warp --dst-crs EPSG:4326 us_cog.tif us_cog_ll.tif"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# rioxarray + xarray_leaflet\n",
-    "import xarray, rioxarray\n",
-    "us = rioxarray.open_rasterio(\n",
-    "    \"us_cog.tif\"\n",
-    ").sel(\n",
-    "    band=1, \n",
-    "    y=slice(7000000, 5000000),\n",
-    "    x=slice(-10000000, -8000000)\n",
-    ")\n",
-    "import xarray_leaflet\n",
-    "from ipyleaflet import Map\n",
-    "\n",
-    "m = Map(zoom=1, basemap=basemaps.CartoDB.DarkMatter)\n",
-    "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l = us.astype(\n",
-    "    float\n",
-    ").rio.reproject(\n",
-    "    \"EPSG:4326\"\n",
-    ").leaflet.plot(m)\n",
-    "l.interact(opacity=(0.0,1.0))"
    ]
   },
   {
@@ -471,9 +440,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "GDS-11.0alpha",
    "language": "python",
-   "name": "python3"
+   "name": "gds"
   },
   "language_info": {
    "codemirror_mode": {
@@ -485,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
