Update install checker for python

--- a/env/py/check_py_stack.ipynb
+++ b/env/py/check_py_stack.ipynb
@@ -63,7 +63,7 @@
     "            if l[:2] != 'r-':\n",
     "                libs.append(l)\n",
     "libs = [i for i in libs if i not in [\n",
-    "    'conda-forge', 'libgdal-arrow-parquet', 'pip', 'cenpy', 'protobuf']\n",
+    "    'conda-forge', 'libgdal-arrow-parquet', 'pip', 'cenpy', 'protobuf', 'rust']\n",
     "    ]\n",
     "libs = [i.replace('-', '_') for i in libs]\n",
     "libs = [bespoke[i] if i in bespoke else i for i in libs]"
@@ -281,7 +281,7 @@
    "source": [
     "import osmnx\n",
     "city = osmnx.geocode_to_gdf('Berkeley, California, US')\n",
-    "osmnx.plot_footprints(osmnx.project_gdf(city));"
+    "osmnx.plot_footprints(osmnx.projection.project_gdf(city));"
    ]
   },
   {
